# PrismataAI

./: .gitattributes  .gitignore  CMakeLists.txt  Directory.Build.props  LICENSE  Makefile  PlayersExplained.txt  README.md  build.sh  build_test.sh  build_win.bat
source/ai/: AIParameters.cpp  AIParameters.h  AITools.cpp  AITools.h  AllPlayers.cpp  AllPlayers.h  AlphaBetaSearch.cpp  AlphaBetaSearch.h  AlphaBetaSearchParameters.hpp  AlphaBetaSearchResults.hpp  AlphaBetaSearchSaveState.hpp  AttackDamageScenario.cpp  AttackDamageScenario.h  AvoidBreachBuyIterator.cpp  AvoidBreachBuyIterator.h  BlockIterator.cpp  BlockIterator.h  BuildOrderIterator.cpp  BuildOrderIterator.h  BuildOrderSearch.cpp  BuildOrderSearch.h  BuildOrderSearchGoal.cpp  BuildOrderSearchGoal.h  BuildOrderSearchParameters.cpp  BuildOrderSearchParameters.h  BuyIterator.cpp  BuyIterator.h  BuyLimits.cpp  BuyLimits.h  CanonicalOrderComparator.cpp  CanonicalOrderComparator.h  CanonicalOrdering.cpp  CanonicalOrdering.h  CardFilter.cpp  CardFilter.h  CardFilterCondition.cpp  CardFilterCondition.h  ChillIterator.cpp  ChillIterator.h  ChillScenario.cpp  (+133 more)
source/ai/experimental/: LazyUCTNode.cpp  LazyUCTNode.h  LazyUCTSearch.cpp  LazyUCTSearch.h  LazyUCTSearchParameters.hpp  LazyUCTSearchResults.hpp  Player_LazyUCT.cpp  Player_LazyUCT.h  Player_PlanEvolution.cpp  Player_PlanEvolution.h  Player_ProgressiveWideningUCT.cpp  Player_ProgressiveWideningUCT.h  Player_RootRacing.cpp  Player_RootRacing.h
source/engine/: Action.cpp  Action.h  BaseTypes.hpp  Card.cpp  Card.h  CardBuyable.cpp  CardBuyable.h  CardBuyableData.cpp  CardBuyableData.h  CardData.cpp  CardData.h  CardType.cpp  CardType.h  CardTypeData.cpp  CardTypeData.h  CardTypeInfo.cpp  CardTypeInfo.h  CardTypes.cpp  CardTypes.h  Common.cpp  Common.h  Condition.cpp  Condition.h  Constants.h  CreateDescription.cpp  CreateDescription.h  DestroyDescription.cpp  DestroyDescription.h  FileUtils.cpp  FileUtils.h  Game.cpp  Game.h  GameState.cpp  GameState.h  GenericValue.cpp  GenericValue.h  GraphViz.hpp  JSONTools.cpp  JSONTools.h  Move.cpp  (+19 more)
source/gui/: Assets.cpp  Assets.h  GUICard.cpp  GUICard.h  GUICardBuyable.cpp  GUICardBuyable.h  GUIEngine.cpp  GUIEngine.h  GUIState.cpp  GUIState.h  GUIState_Menu.cpp  GUIState_Menu.h  GUIState_Play.cpp  GUIState_Play.h  GUITools.cpp  GUITools.h  Vec2.hpp  WorldView.hpp  main.cpp
source/standalone/: ExampleAI.cpp  main.cpp
source/testing/: Benchmarks.cpp  Benchmarks.h  HTMLChart.cpp  HTMLChart.h  HTMLTable.cpp  HTMLTable.h  PlayerBenchmark.cpp  PlayerBenchmark.h  TestingConfig.cpp  TestingConfig.h  Tournament.cpp  Tournament.h  TournamentGame.cpp  TournamentGame.h  main.cpp
visualstudio/: Prismata.sln  Prismata_AI.vcxproj  Prismata_AI.vcxproj.filters  Prismata_Engine.vcxproj  Prismata_Engine.vcxproj.filters  Prismata_GUI.vcxproj  Prismata_GUI.vcxproj.filters  Prismata_Testing.vcxproj  Prismata_standalone.vcxproj
